crates/shiplog-report/tests/snapshots/report__workstream_summary.snap
---
source: crates/shiplog-report/tests/report.rs
expression: ws
---
name: infrastructure
event_count: 42
coverage: 78.5
